--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -21,11 +21,11 @@ status-website:
   name: Upptime
   #introTitle: ""
   #introMessage:
-  navbar:
-    - title: Status
-      href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
+  #navbar:
+  #  - title: Status
+  #    href: /
+  #  - title: GitHub
+  #    href: https://github.com/$OWNER/$REPO
       
 i18n:
   footer: ""
